--- a/res/lightboxpics.html
+++ b/res/lightboxpics.html
@@ -26,7 +26,7 @@ Die notwendigen JS und CSS-Dateien müssen aber manuell in die Seite eingebunden
 
 ###TEAM_FIRSTPICTURE###
 ###MEDIAS######MEDIA###
-  <h1>###MEDIA_TITLE### (###LABEL_team###)</h1>
+  <h1>###MEDIA_TITLE###</h1>
 
 <a href="###MEDIA_FILE###" rel="lightbox[pictures]">###MEDIA_THUMBNAIL###</a>
 
